# cordic

./: pyproject.toml  readme.md
src/: cordic.py
tests/: test_cordic.py
